[package]
name = "odjitter"
version = "0.1.0"
edition = "2021"
authors = ["Dustin Carlino <dabreegster@gmail.com"]
description = "Disaggregate origin/destination data from zones to points"

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.0", features = ["derive"] }
# TODO Separate library/binary dependencies
csv = "1.1.6"
fs-err = "2.6.0"
geo = "0.18.0"
geo-types = "0.7.2"
geojson = { version = "0.22.2", features = ["geo-types"] }
rand = "0.8.4"
rstar = "0.8.4"
serde_json = "1.0.73"
